@@ -7,6 +7,10 @@ script_location = ${script_location}
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
+# set to 'true' to run the environment during
+# the 'revision' command, regardless of autogenerate
+# revision_environment = false
+
 sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
